<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="jp.co.asaichi.pubrepo.view.activity.ChangePasswordActivity">

        <include
            android:id="@+id/mIncludeToolbar"
            layout="@layout/layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/explanation_about_password_reissue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/mEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/place_hold_gray"
                android:hint="@string/enter_email_address"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/mButtonSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_height_edit_text"
                android:layout_marginTop="20dp"
                android:background="@drawable/tropical_rain_forest_border_rounded_corner"
                android:stateListAnimator="@null"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</layout>