<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="jp.co.asaichi.pubrepo.view.activity.FirstPageActivity">

        <include
            android:id="@+id/mIncludeToolbar"
            layout="@layout/layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-40dp"
                    android:layout_marginTop="-50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_first_page" />

                <Button
                    android:id="@+id/mButtonMain"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_height_edit_text"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:alpha="0.7"
                    android:background="@drawable/tropical_border"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:stateListAnimator="@null"
                    android:text="@string/view_all_reports"
                    android:textColor="@color/tropical_rain_forest" />
            </RelativeLayout>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/what_is_pubrepos"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:lineSpacingExtra="1dp"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/content_first_page"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/mButtonRegister"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/common_height_edit_text"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/register_border"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:stateListAnimator="@null"
                            android:text="@string/btn_register_txt"
                            android:textColor="@color/register" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="すでにユーザー登録されている方はこちら"
                            android:textColor="@color/black" />

                        <Button
                            android:id="@+id/mButtonLogin"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/common_height_edit_text"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/cerulear_border_rounded_corner"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:stateListAnimator="@null"
                            android:text="@string/login"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</layout>