<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="jp.co.asaichi.pubrepo.view.activity.EditProfileActivity">

        <include
            android:id="@+id/mIncludeToolbar"
            layout="@layout/layout_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/mEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="投稿者名を入力…"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="※レポートに表示され、公開されるニックネームです。" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/info" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/mAppCompatCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:button="@drawable/checkbox_selector"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="（自治体名）内に在住・在学・勤務している" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/street_address"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/mEditTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="住所を入力…"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>